--- a/index.html
+++ b/index.html
@@ -461,6 +461,25 @@
                     </section>
                     
                     <hr>
+                    <section id="unclaimed-funds-section">
+                        <h3>Finance Management</h3>
+                        <form id="unclaimed-form" class="admin-form">
+                            <fieldset>
+                                <legend>Floating / Unclaimed Funds</legend>
+                                <p class="small-note">Manage funds recieved but not linked to specific units (e.g. unknown deposits).</p>
+                                
+                                <div class="form-group">
+                                    <label for="unclaimed-amount">Total Unclaimed Amount (RM):</label>
+                                    <input type="number" id="unclaimed-amount" min="0" step="0.01" placeholder="e.g. 50.00" required>
+                                </div>
+
+                                <button type="submit">Update Unclaimed Amount</button>
+                                <span id="unclaimed-form-status" class="small-note"></span>
+                            </fieldset>
+                        </form>
+                    </section>
+
+                    <hr>
                     <section id="system-config-section">
                         <h3>System Configuration</h3>
                         <form id="threshold-form" class="admin-form">
