BILL-4 Bill Softcopy Upload: Implemented file upload for bills and edit functionality.
- Updated `Bill` model to include `billUrl`.
- Added file input to Bill Form in `index.html`.
- Updated `js/app.js` to handle bill file uploads via Google Drive API.
- Added "View Softcopy" link to Bill History table.
- Implemented `Edit` functionality for Bill records to allow retro-fitting softcopies.

---
**Current System Capabilities:**
- Core Infrastructure & Auth (Available)
- Monthly Bill Management (Create, Read, Update, Delete, Auto-Calc) (Available)
- Bill Softcopy Upload (Available)
- Owner Payment Management (Record, Receipt Upload, History, Archive) (Available)
- Public Portal (Dashboard, Payment Submission, Round Visualization) (Available)
- System Admin (Unit Status, Manual Threshold, Data Export, Unclaimed Funds) (Available)
- Collection Rounds Management (Available)
- Admin UI Segmentation (Available)
- Theme Customization (Available)

--- a/index.html
+++ b/index.html
@@ -252,7 +252,13 @@
                                 <label for="bill-date">Bill Issue Date:</label>
                                 <input type="date" id="bill-date" required>
                             </div>
-                            <button type="submit">Save Bill</button>
+                            <div class="form-group">
+                                <label for="bill-softcopy">Softcopy (PDF/Image):</label>
+                                <input type="file" id="bill-softcopy" accept="image/*,application/pdf">
+                                <p id="current-bill-file" class="small-note" style="display:none;"></p>
+                            </div>
+                            <button type="submit" id="bill-submit-btn">Save Bill</button>
+                            <button type="button" id="bill-cancel-btn" style="display:none; background-color: #6c757d;">Cancel Edit</button>
                             <span id="bill-form-status" class="small-note"></span>
                         </fieldset>
                     </form>
@@ -267,6 +273,7 @@
                                         <th>Year</th>
                                         <th>Amount (RM)</th>
                                         <th>Issue Date</th>
+                                        <th>Softcopy</th>
                                         <th>Actions</th>
                                     </tr>
                                 </thead>
